# biodivine-aeon-wasm

./: .gitignore  Cargo.toml  README.md
example/: README.md  index.html  index.js
src/: boolean_network.rs  computation.rs  conversions.rs  decision_tree.rs  graph_task_context.rs  lib.rs  utils.rs
src/bdt/: _attributes_for_network.rs  _impl_bdt_json.rs  _impl_indexing.rs
src/scc/: _impl_class.rs  _impl_classifier.rs  _impl_progress_tracker.rs  mod.rs
src/scc/algo_interleaved_transition_guided_reduction/: _impl_scheduler.rs  mod.rs
src/scc/algo_saturated_reachability/: mod.rs
src/scc/algo_stability_analysis/: _impl_variable_stability.rs
src/scc/algo_xie_beerel/: mod.rs
src/util/: index_type.rs
