[package]
name = "aeon-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
biodivine-lib-param-bn = "0.5.9"
biodivine-lib-bdd = "0.5"
getrandom = { version = "0.2", features = ["js"]}
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
fixed-map = "0.7.2"
json = "0.12.4"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }