[package]
name = "aeon-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
biodivine-lib-param-bn = "0.5.9"
biodivine-lib-bdd = "0.5"
getrandom = { version = "0.2", features = ["js"]}
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
fixed-map = "0.9.5"
json = "0.12.4"
# WASM things
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }